--- a/2022-2023-2.html
+++ b/2022-2023-2.html
@@ -100,7 +100,7 @@
 										<td width="30%"><div align="center">CS2310</div></td>
 										<td width="30%"><div align="center">Operating Systems</div></td>
 										<td width="30%"><div align="center">
-											<a href="CS2310.html" style="text-decoration:none;color: blue;" target="_blank">CS2310</a>
+											<a href="Homepage/CS2310.html" style="text-decoration:none;color: blue;" target="_blank">CS2310</a>
 										</div></td>	
 									</tr>
 
