--- a/Homepage/CS2310.html
+++ b/Homepage/CS2310.html
@@ -194,7 +194,7 @@
 					<td style="padding-left:10px; padding-top: 10px; padding-bottom: 10px">
 						<font style="font-size: 12px;">
 							<b>Go to <a href="#top" style="color: #000000; text-decoration:none;">Top</a></b> &ensp;|&ensp;
-							<b><a href="canvas.html" style="color: #000000; text-decoration:none;">Canvas Home Page</a></b> &ensp;|&ensp; 
+							<b><a href="https://computersciencekaoyan.github.io/canvas.html" style="color: #000000; text-decoration:none;">Canvas Home Page</a></b> &ensp;|&ensp; 
 							<b><a href="Announce.html" target="_blank" style="color: #000000; text-decoration:none;"> Announcement </a></b>
 							<br>
 							Questions or comments regarding Canvas? Send e-mail to the course Staffs or TAs.
