--- a/canvas.html
+++ b/canvas.html
@@ -315,7 +315,8 @@
 									<!---->
 									<h2>常用下载<h2>
 									<hr>
-										<a href="2022-2023-1-winter.pdf"  download="2022-2023-1-winter.pdf">【本学期课表下载】</a>
+										<a href="2022-2023-1-winter.pdf"  download="2022-2023-1-winter.pdf" 
+										style="text-decoration: none;font-size: medium;color: #000000;">【本学期课表下载】</a>
 
 
 
