--- a/canvas.html
+++ b/canvas.html
@@ -315,7 +315,7 @@
 									<!---->
 									<h2>常用下载<h2>
 									<hr>
-										<ul style="font-weight:normal;">
+										<ul style="font-weight:lighter;">
 											<li>
 												<a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/0
 												3%20%E8%AF%BE%E7%A8%8B%E5%A4%A7%E8%A1%A8%E4%B8%8E%E6%95%99%E5%AD%A6%E6%97%A5%E5%8E%
