--- a/canvas.html
+++ b/canvas.html
@@ -320,7 +320,7 @@
 												<a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/0
 												3%20%E8%AF%BE%E7%A8%8B%E5%A4%A7%E8%A1%A8%E4%B8%8E%E6%95%99%E5%AD%A6%E6%97%A5%E5%8E%
 												86/01%20%E5%90%84%E5%AD%A6%E6%9C%9F%E8%AF%BE%E8%A1%A8/2022-2023-1-winter.pdf"  download="2022-2023-1-winter.pdf" 
-												style="text-decoration: none;font-size:small;color: #000000;">【本学期课表下载】</a>
+												style="text-decoration: none;font-size:small;color: #000000;" target="_blank">【本学期课表下载】</a>
 											</li>
 										</ul>
 										
