--- a/canvas.html
+++ b/canvas.html
@@ -130,9 +130,9 @@
 									<td> 
 										<div class="menuHead"> 
 											<font style="color:#ffffff;"><b><i>Curriculum</i><br><br></b> </font>
-											<a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/
-											master/README00%20%E5%9F%B9%E5%85%BB%E6%96%B9%E6%A1%88%E6%9F%A5%E8%AF%A2/%
-											E5%9F%B9%E5%85%BB%E6%96%B9%E6%A1%88.pdf"
+											<a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw
+											/master/02%20%E5%9F%B9%E5%85%BB%E6%96%B9%E6%A1%88%E6%9F%A5%E8%AF%A2/%E5%9
+											F%B9%E5%85%BB%E6%96%B9%E6%A1%88.pdf"
 											class="menuItem" target="_blank">Curriculum Structure
 											</a>
 										</div>
