--- a/canvas.html
+++ b/canvas.html
@@ -267,6 +267,7 @@
 																		<a href="canvas.html">CardView</a>
 																		<a href="listview.html">ListView</a>
 																		<a href="calendar.html">Recent</a>
+																		<a href="Homepage/0x00.studentenquiry.html">Enquiry</a>
 																  	</div>
 																</div> 
 															</div>
