--- a/Homepage/0x00.studentenquiry.html
+++ b/Homepage/0x00.studentenquiry.html
@@ -7,8 +7,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport"content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no" />
         <!--自适应屏幕-->
-        <link rel="stylesheet" type="text/css" href="adoption.css">
-		<link rel="stylesheet" type="text/css" href="curriculum.css">
+        <link rel="stylesheet" type="text/css" href="css/adoption.css">
+		<link rel="stylesheet" type="text/css" href="css/curriculum.css">
     </head>
  
 <body bgcolor="#ffffff" text="#000000" onLoad="page_onload()" style="font-family:Arial, Helvetica, sans-serif">
@@ -669,21 +669,21 @@
                             <td width="10%"><div align="center"></div></td>
                         </tr>
                         <tr style="background-color:white">
-                            <td width="10%"><div align="center"></div></td>
-                            <td width="20%"><div style="padding-left: 3px;"></div></td>
-                            <td width="4%"><div align="center"></div></td>
-                            <td width="5%"><div align="center"></div></td>
-                            <td width="5%"><div align="center"></div></td>
-                            <td width="5%"><div align="center"></div></td>
-                            <td width="4%"><div align="center"></div></td>
-                            <td width="5%"><div align="center"></div></td>
+                            <td width="10%"><div align="center">BM301</div></td>
+                            <td width="20%"><div style="padding-left: 3px;">呼吸系统</div></td>
+                            <td width="4%"><div align="center">2.5</div></td>
+                            <td width="5%"><div align="center">43</div></td>
+                            <td width="5%"><div align="center">35</div></td>
+                            <td width="5%"><div align="center">31</div></td>
+                            <td width="4%"><div align="center">三</div></td>
+                            <td width="5%"><div align="center">1</div></td>
                             <td width="10%"><div align="center">必修</div></td>
                             <td width="5%"><div align="center"></div></td>
                             <td width="10%"><div align="center"></div></td>
                             <td width="10%"><div align="center"></div></td>
                         </tr>
                         <tr style="background-color:white">
-                            <td width="10%"><div align="center"></div></td>
+                            <td width="10%"><div align="center">BM302</div></td>
                             <td width="20%"><div style="padding-left: 3px;"></div></td>
                             <td width="4%"><div align="center"></div></td>
                             <td width="5%"><div align="center"></div></td>
