--- a/Homepage/curriculum-ms.html
+++ b/Homepage/curriculum-ms.html
@@ -7,8 +7,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport"content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no" />
         <!--自适应屏幕-->
-        <link rel="stylesheet" type="text/css" href="adoption.css">
-		<link rel="stylesheet" type="text/css" href="curriculum.css">
+        <link rel="stylesheet" type="text/css" href="css/adoption.css">
+		<link rel="stylesheet" type="text/css" href="css/curriculum.css">
     </head>
  
 <body bgcolor="#ffffff" text="#000000" onLoad="page_onload()" style="font-family:Verdana, Geneva, Tahoma, sans-serif">
