--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
             </font></a></h1>
           </td>
           <td  width="40%" valign="middle" style="word-break: break-all;" align="right">
+            <div style="font-family:微软雅黑;font-size: medium;">
+              <a href="https://gitee.com/login?redirect_to_url=%2Fdashboard" target="_blank" style="text-decoration: none;color: white;">统一身份认证</a>
+            </div>
+            
+
+
             <br>
             <p>
               <div id="time" style="font-family:微软雅黑;font-size: medium;color: white;"></div>
