--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@
     <!-- ####################################################################################################### -->
     <div id="homepage" class="clear">
       <!-- ###### -->
+      <h2>
+        <font face="微软雅黑">本周课程安排预览</font>
+      </h2>
+      <div style="text-align: center;">
+        <img src="image/index/课表.png" width= 1000px; height=630px; style="text-align:center;">
+      </div>
+      <br>
       <div id="content">
         <div id="top_featured" class="clear">
           <h2>
