--- a/index.html
+++ b/index.html
@@ -131,11 +131,20 @@
             <li><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/01%20%E5%B8%B8%E7%94%A8%E6%A8%A1%E6%9D%BF%E8%A1%A8%E6%A0%BC%E4%B8%8B%E8%BD%BD/01%20%E5%B8%B8%E7%94%A8%E6%A8%A1%E6%9D%BF/%E6%95%99%E5%AD%A6%E7%9B%B8%E5%85%B3%E6%A8%A1%E6%9D%BF%E4%B8%8B%E8%BD%BD/%E6%95%99%E5%AD%A6%E6%97%A5%E5%8E%86%E6%A8%A1%E6%9D%BF%EF%BC%88SJTU%EF%BC%89%20.xlsx" style="color: black;text-decoration: none;" target="_blank" >课程大表模板</a></li>
             <li><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/01%20%E5%B8%B8%E7%94%A8%E6%A8%A1%E6%9D%BF%E8%A1%A8%E6%A0%BC%E4%B8%8B%E8%BD%BD/03%20%E8%80%83%E8%AF%95%E8%AF%95%E5%8D%B7%E6%A8%A1%E6%9D%BF%E5%8F%8A%E7%AD%94%E9%A2%98%E5%8D%A1/%E8%AF%95%E5%8D%B7%E6%A8%A1%E6%9D%BF%EF%BC%88A3%E6%9C%80%E6%96%B0%EF%BC%89.docx" style="color: black;text-decoration: none;" target="_blank" >试卷模板(A3)</a></li>
             <li><a href="" style="color: black;text-decoration: none;" target="_blank" ></a></li>
-            <li><a href="" style="color: black;text-decoration: none;" target="_blank" ></a></li>
-            <li><a href="" style="color: black;text-decoration: none;" target="_blank" ></a></li>
-            <li><a href="" style="color: black;text-decoration: none;" target="_blank" ></a></li>
-            <li><a href="" style="color: black;text-decoration: none;" target="_blank" ></a></li>
+
           </ul>
+
+        </div>
+
+        <div id="latestnews" style="font-size: medium;font-family:微软雅黑;line-height:30px;">
+          <h2>
+            <font face="微软雅黑">医学院临时下载通道</font>
+          </h2>
+          <ul>
+            <li><a href="https://gitee.com/Jinhang_Qiu/Download/tree/master/%E7%97%85%E7%90%86%E5%AD%A6%E4%B8%8E%E7%97%85%E7%90%86%E7%94%9F%E7%90%86%E5%AD%A6%E6%80%BB%E8%AE%BA" style="color: black;text-decoration: none;" target="_blank" >病理学与病理生理学总论资料</a></li>
+
+          </ul>
+          
         </div>
         
       </div>
