--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <font face="微软雅黑">本周课程安排预览</font>
       </h2>
       <div style="text-align: center;">
-        <img src="image/index/课表.png" width= 1000px; height=630px; style="text-align:center;">
+        <img src="image/课表.png" width= 1000px; height=630px; style="text-align:center;">
       </div>
       <br>
       <div id="content">
