--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div id="content">
         <div id="top_featured" class="clear">
           <h2>
-            <font face="微软雅黑">信息获取</font>
+            <font face="微软雅黑">学期信息</font>
           </h2>
           <ul class="clear" style="font-size: medium;line-height: normal;font-family: 微软雅黑;line-height:30px;"> 
             <li><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/02%20%E5%9F%B9%E5%85%BB%E6%96%B9%E6%A1%88%E6%9F%A5%E8%AF%A2/%E5%9F%B9%E5%85%BB%E6%96%B9%E6%A1%88.pdf" style="color: black;text-decoration: none;" target="_blank" >培养方案查询</a></li>
@@ -111,7 +111,7 @@
           </ul>
 
         </div>
-        
+        <br>
         <div id="latestnews" style="font-size: medium;font-family:微软雅黑;line-height:30px;">
           <h2>
             <font face="微软雅黑">教学文件</font>
@@ -131,9 +131,8 @@
             <li><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/01%20%E5%B8%B8%E7%94%A8%E6%A8%A1%E6%9D%BF%E8%A1%A8%E6%A0%BC%E4%B8%8B%E8%BD%BD/01%20%E5%B8%B8%E7%94%A8%E6%A8%A1%E6%9D%BF/%E6%95%99%E5%AD%A6%E7%9B%B8%E5%85%B3%E6%A8%A1%E6%9D%BF%E4%B8%8B%E8%BD%BD/%E6%95%99%E5%AD%A6%E6%97%A5%E5%8E%86%E6%A8%A1%E6%9D%BF%EF%BC%88SJTU%EF%BC%89%20.xlsx" style="color: black;text-decoration: none;" target="_blank" >课程大表模板</a></li>
             <li><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/01%20%E5%B8%B8%E7%94%A8%E6%A8%A1%E6%9D%BF%E8%A1%A8%E6%A0%BC%E4%B8%8B%E8%BD%BD/03%20%E8%80%83%E8%AF%95%E8%AF%95%E5%8D%B7%E6%A8%A1%E6%9D%BF%E5%8F%8A%E7%AD%94%E9%A2%98%E5%8D%A1/%E8%AF%95%E5%8D%B7%E6%A8%A1%E6%9D%BF%EF%BC%88A3%E6%9C%80%E6%96%B0%EF%BC%89.docx" style="color: black;text-decoration: none;" target="_blank" >试卷模板(A3)</a></li>
           </ul>
-
         </div>
-
+        <br>
         <div id="latestnews" style="font-size: medium;font-family:微软雅黑;line-height:30px;">
           <h2>
             <font face="微软雅黑">医学院相关资源下载通道</font>
