--- a/index.html
+++ b/index.html
@@ -100,27 +100,39 @@
       </div>
       <br>
       <div id="content">
-        <div id="top_featured" class="clear">
-          <h2>
-            <font face="微软雅黑">学期信息</font>
-          </h2>
-          <ul class="clear" style="font-size: medium;line-height: normal;font-family: 微软雅黑;line-height:30px;"> 
-            <li><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/02%20%E5%9F%B9%E5%85%BB%E6%96%B9%E6%A1%88%E6%9F%A5%E8%AF%A2/%E5%9F%B9%E5%85%BB%E6%96%B9%E6%A1%88.pdf" style="color: black;text-decoration: none;" target="_blank" >培养方案查询</a></li>
-            <li><a href="index/calendar.html" style="color: black;text-decoration: none;" target="_blank" >2022-2023年校历查询</a></li>
-            <li><a href="index/exam-time.html" style="color: black;text-decoration: none;" target="_blank">2022-2023-2考试时间查询</a> </li>
-          </ul>
-
-        </div>
-        <br>
-        <div id="latestnews" style="font-size: medium;font-family:微软雅黑;line-height:30px;">
-          <h2>
-            <font face="微软雅黑">教学文件</font>
-          </h2>
-          <ul>
-            <li><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/03%20%E8%AF%BE%E7%A8%8B%E5%A4%A7%E8%A1%A8%E4%B8%8E%E6%95%99%E5%AD%A6%E6%97%A5%E5%8E%86/01%20%E5%90%84%E5%AD%A6%E6%9C%9F%E8%AF%BE%E8%A1%A8/2022-2023-1-winter.pdf" style="color: black;text-decoration: none;" target="_blank" >2022-2023-1课表</a></li>
-            <li><a href=" https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/03%20%E8%AF%BE%E7%A8%8B%E5%A4%A7%E8%A1%A8%E4%B8%8E%E6%95%99%E5%AD%A6%E6%97%A5%E5%8E%86/01%20%E5%90%84%E5%AD%A6%E6%9C%9F%E8%AF%BE%E8%A1%A8/2022-2023-2%E8%AF%BE%E7%A8%8B%E8%A1%A8.pdf" style="color: black;text-decoration: none;" target="_blank" >2022-2023-2课表</a></li>
-          </ul>
-        </div>
+        <table style="border: 0;">
+          <tbody style="width: 100%;">
+            <tr>
+              <td style="width: 50%;"valign="top">
+                <div id="top_featured" class="clear">
+                  <h2>
+                    <font face="微软雅黑">学期信息</font>
+                  </h2>
+                  <div id="latestnews" style="font-size: medium;font-family:微软雅黑;line-height:30px;">
+                    <li><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/02%20%E5%9F%B9%E5%85%BB%E6%96%B9%E6%A1%88%E6%9F%A5%E8%AF%A2/%E5%9F%B9%E5%85%BB%E6%96%B9%E6%A1%88.pdf" style="color: black;text-decoration: none;" target="_blank" >培养方案查询</a></li>
+                    <li><a href="index/calendar.html" style="color: black;text-decoration: none;" target="_blank" >2022-2023年校历查询</a></li>
+                    <li><a href="index/exam-time.html" style="color: black;text-decoration: none;" target="_blank">2022-2023-2考试时间查询</a> </li>
+                  </ul>
+                  &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
+                </div>
+              </td>
+              <td style="width: 50%;padding-left:100px;"valign="top">
+                <div id="latestnews" style="font-size: medium;font-family:微软雅黑;line-height:30px;">
+                  <h2>
+                    <font face="微软雅黑">教学文件</font>
+                  </h2>
+                  <ul>
+                    <li><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/03%20%E8%AF%BE%E7%A8%8B%E5%A4%A7%E8%A1%A8%E4%B8%8E%E6%95%99%E5%AD%A6%E6%97%A5%E5%8E%86/01%20%E5%90%84%E5%AD%A6%E6%9C%9F%E8%AF%BE%E8%A1%A8/2022-2023-1-winter.pdf" style="color: black;text-decoration: none;" target="_blank" >2022-2023-1课表</a></li>
+                    <li><a href=" https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/03%20%E8%AF%BE%E7%A8%8B%E5%A4%A7%E8%A1%A8%E4%B8%8E%E6%95%99%E5%AD%A6%E6%97%A5%E5%8E%86/01%20%E5%90%84%E5%AD%A6%E6%9C%9F%E8%AF%BE%E8%A1%A8/2022-2023-2%E8%AF%BE%E7%A8%8B%E8%A1%A8.pdf" style="color: black;text-decoration: none;" target="_blank" >2022-2023-2课表</a></li>
+                  </ul>
+                  <div style="text-align: right;font-size: small;"><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/tree/master/03%20%E8%AF%BE%E7%A8%8B%E5%A4%A7%E8%A1%A8%E4%B8%8E%E6%95%99%E5%AD%A6%E6%97%A5%E5%8E%86" target="_blank">more</a></div>
+                  &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        
         <br>
         <div id="latestnews" style="font-size: medium;font-family:微软雅黑;line-height:30px;">
           <h2>
@@ -178,7 +190,7 @@
 <!----CopyRight-->>
 
   <div style="color: white;font-family: Arial, Helvetica, sans-serif;font-size: medium;">
-    <p class="center">Copyright &copy; 2023 - Department of Computer Science and Medical Interdisciplinary Engineering </p>
+    <p class="center" style="height:16px;">Copyright &copy; 2023 - Department of Computer Science and Medical Interdisciplinary Engineering </p>
   </div>
 
 
