--- a/index/calendar.html
+++ b/index/calendar.html
@@ -53,18 +53,18 @@
 </div>
 <!-- ####################################################################################################### -->
 <div class="wrapper row3">
-  <div id="container" class="clear">
+  <div id="container" class="clear" style="line-height: 30px;">
     <!-- ####################################################################################################### -->
-    <div id="homepage" class="clear">
         <div style="font-size:24px;font-family: 微软雅黑;font-weight: bold;text-align: center;">
-            <h2>2022-2023学年度校历</h2>
+            2022-2023学年度校历
         </div>
+        <div style="font: size 16px;font-family: 微软雅黑;text-align: center;">
+          2023-02-16 10:53
+      </div>
+        <hr>
         <br><br><br><br><br><br><br><br><br>
         <a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/03%20%E8%AF%BE%E7%A8%8B%E5%A4%A7%E8%A1%A8%E4%B8%8E%E6%95%99%E5%AD%A6%E6%97%A5%E5%8E%86/02%20%E5%AD%A6%E6%9C%9F%E6%A0%A1%E5%8E%86/2022-2023-2%E6%A0%A1%E5%8E%86.pdf " target="_blank" style="font-size: medium;font-family: 微软雅黑;">[点击下载-2022-2023-2学期教学行政历]</a>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        
-
-    </div>
+       
     <!-- ####################################################################################################### -->
   </div>
 </div>
@@ -73,11 +73,13 @@
 <!-- ####################################################################################################### -->
 
 
-<!----CopyRight-->>
+<!----CopyRight-->
+<footer>
+  <div style="color: white;font-family: Arial, Helvetica, sans-serif;font-size: medium;">
+  <div class="center" style="height:16px;">Copyright &copy; 2023 - Department of Computer Science and Medical Interdisciplinary Engineering </div>
+</div>
+</footer>
 
-  <div style="color: white;font-family: Arial, Helvetica, sans-serif;font-size: medium;height:25px;">
-    <p class="center">Copyright &copy; 2022 - Department of Computer Science and Medical Interdisciplinary Engineering </p>
-  </div>
 
 
 
