--- a/index/calendar.html
+++ b/index/calendar.html
@@ -15,7 +15,7 @@
       <tbody>
         <tr>
           <td  width="60%" valign="middle" style="word-break: break-all;" align="left">
-            <h1><a href="index.html"><font face="Times">
+            <h1><a href="https://computersciencekaoyan.github.io/index.html"><font face="Times">
               计算机科学与医学交叉工程系<br>
               Department of Computer Science<br>
               and Medical Interdisciplinary Engineering
@@ -64,7 +64,7 @@
         <hr>
         <br><br><br><br><br><br><br><br><br>
         <a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/03%20%E8%AF%BE%E7%A8%8B%E5%A4%A7%E8%A1%A8%E4%B8%8E%E6%95%99%E5%AD%A6%E6%97%A5%E5%8E%86/02%20%E5%AD%A6%E6%9C%9F%E6%A0%A1%E5%8E%86/2022-2023-2%E6%A0%A1%E5%8E%86.pdf " target="_blank" style="font-size: medium;font-family: 微软雅黑;">[点击下载-2022-2023-2学期教学行政历]</a>
-       
+        
     <!-- ####################################################################################################### -->
   </div>
 </div>
@@ -74,11 +74,15 @@
 
 
 <!----CopyRight-->
-<footer>
-  <div style="color: white;font-family: Arial, Helvetica, sans-serif;font-size: medium;">
-  <div class="center" style="height:16px;">Copyright &copy; 2023 - Department of Computer Science and Medical Interdisciplinary Engineering </div>
-</div>
+
+<footer style="padding:10px;text-align: center; background-position: bottom;margin-top:40px;">
+  <hr>
+  <div style="font-family:Arial, Helvetica, sans-serif; text-align: center;color: black; font-size: small;padding-bottom: 10px;padding-top: 0px;">
+  Copyright &copy; 2023 - Department of Computer Science and Medical Interdisciplinary Engineering
+
+  </div>
 </footer>
+
 
 
 
