--- a/index/timetable.html
+++ b/index/timetable.html
@@ -15,13 +15,16 @@
       <tbody>
         <tr>
           <td  width="60%" valign="middle" style="word-break: break-all;" align="left">
-            <h1><a href="index.html"><font face="Times">
+            <h1><a href="https://computersciencekaoyan.github.io/index.html"><font face="Times">
               计算机科学与医学交叉工程系<br>
               Department of Computer Science<br>
               and Medical Interdisciplinary Engineering
             </font></a></h1>
           </td>
           <td  width="40%" valign="middle" style="word-break: break-all;" align="right">
+            <div style="font-family:微软雅黑;font-size: medium;">
+                <a href="https://computersciencekaoyan.github.io/index.html" style="text-decoration: none;color: white;">主页</a>
+              </div>
             <br>
             <p>
               <div id="time" style="font-family:微软雅黑;font-size: medium;color: white;"></div>
@@ -234,14 +237,13 @@
 
 <!-- ####################################################################################################### -->
 <!----CopyRight-->
-<footer >
-    <div>
-        <div style="font-family:Arial, Helvetica, sans-serif; text-align: center;color: white; font-size: medium;padding-bottom: 10px;padding-top: 10px;text-decoration-line:overline;">
-            Copyright &copy; 2023 - Department of Computer Science and Medical Interdisciplinary Engineering
-        </div>
+<footer style="padding:10px;text-align: center; background-position: bottom;margin-top:40px;">
+    <hr>
+    <div style="font-family:Arial, Helvetica, sans-serif; text-align: center;color: black; font-size: small;padding-bottom: 10px;padding-top: 0px;">
+    Copyright &copy; 2023 - Department of Computer Science and Medical Interdisciplinary Engineering
+  
     </div>
-</footer>
-
+  </footer>
 
 
 
