--- a/index/exam-time.html
+++ b/index/exam-time.html
@@ -1,121 +1,179 @@
-<!doctype html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
+<head profile="http://gmpg.org/xfn/11">
+<link rel="shortcut icon" href="CSE-MED">
+<title>Department of Computer Science and Medical Interdisciplinary Engineering</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="imagetoolbar" content="no" />
+<link rel="stylesheet" href="css/layout.css" type="text/css" />
 
-    <head>
-        <meta charset="utf-8">
-        <title>无标题文档</title>
-        <style>
-            * {margin: 0;padding: 0}
-            #calendar {width: 210px;margin: 100px auto;overflow: hidden;border: 1px solid #000;padding: 20px;position: relative}
-            #calendar h4 {text-align: center;margin-bottom: 10px}
-            #calendar .a1 {position: absolute;top: 20px;left: 20px;}
-            #calendar .a2 {position: absolute;top: 20px;right: 20px;}
-            #calendar .week {height: 30px;line-height: 20px;border-bottom: 1px solid #000;margin-bottom: 10px}
-            #calendar .week li {float: left;width: 30px;height: 30px;text-align: center;list-style: none;}
-            #calendar .dateList {overflow: hidden;clear: both}
-            #calendar .dateList li {float: left;width: 30px;height: 30px;text-align: center;line-height: 30px;list-style: none;}
-            #calendar .dateList .ccc {color: #ccc;}
-            #calendar .dateList .red {background: #F90;color: #fff;}
-            #calendar .dateList .sun {color: #f00;}
-        </style>
-        <script src="js/jquery-1.11.3.min.js"></script>
-        <script>
-            $(function() {
-
-                //必要的数据
-                //今天的年 月 日 ；本月的总天数；本月第一天是周几？？？
-                var iNow=0;
-
-                function run(n) {
-
-                    var oDate = new Date(); //定义时间
-                    oDate.setMonth(oDate.getMonth()+n);//设置月份
-                    var year = oDate.getFullYear(); //年
-                    var month = oDate.getMonth(); //月
-                    var today = oDate.getDate(); //日
-
-                    //计算本月有多少天
-                    var allDay = [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31][month];
-
-                    //判断闰年
-                    if(month == 1) {
-                        if(year % 4 == 0 && year % 100 != 0 || year % 400 == 0) {
-                            allDay = 29;
-                        }
-                    }
-
-                    //判断本月第一天是星期几
-                    oDate.setDate(1); //时间调整到本月第一天
-                    var week = oDate.getDay(); //读取本月第一天是星期几
-
-                    //console.log(week);
-                  $(".dateList").empty();//每次清空
-                    //插入空白
-
-                    for(var i = 0; i < week; i++) {
-                        $(".dateList").append("<li></li>");
-                    }
-
-                    //日期插入到dateList
-                    for(var i = 1; i <= allDay; i++) {
-                        $(".dateList").append("<li>" + i + "</li>")
-                    }
-                    //标记颜色=====================
-                    $(".dateList li").each(function(i, elm){
-                        //console.log(index,elm);
-                        var val = $(this).text();
-                        //console.log(val);
-                        if (n==0) {
-                            if(val<today){
-                            $(this).addClass('ccc')
-                        }else if(val==today){
-                            $(this).addClass('red')
-                        }else if(i%7==0  ||  i%7==6   ){
-                            $(this).addClass('sun')
-                        }
-                        }else if(n<0){
-                            $(this).addClass('ccc')
-                        }else if(i%7==0  ||  i%7==6   ){
-                            $(this).addClass('sun')
-                        }
-                    });
-
-                    //定义标题日期
-                    $("#calendar h4").text(year + "年" + (month + 1) + "月");
-                };
-                run(0);
-
-                $(".a1").click(function(){
-                    iNow--;
-                    run(iNow);
-                });
-
-                $(".a2").click(function(){
-                    iNow++;
-                    run(iNow);
-                })
-            });
-        </script>
-    </head>
-
-    <body>
-        <div id="calendar">
-            <h4>2013年10月</h4>
-            <a href="##" class="a1">上月</a>
-            <a href="##" class="a2">下月</a>
-            <ul class="week">
-                <li>日</li>
-                <li>一</li>
-                <li>二</li>
-                <li>三</li>
-                <li>四</li>
-                <li>五</li>
-                <li>六</li>
-
-            </ul>
-            <ul class="dateList"></ul>
+</head>
+<body id="top">
+<div class="wrapper row1">
+  <div id="header" class="clear">
+    <table  width="100%" border="0" cellspacing="0" cellpadding="0">
+      <tbody>
+        <tr>
+          <td  width="60%" valign="middle" style="word-break: break-all;" align="left">
+            <h1><a href="https://computersciencekaoyan.github.io/index.html"><font face="Times">
+              计算机科学与医学交叉工程系<br>
+              Department of Computer Science<br>
+              and Medical Interdisciplinary Engineering
+            </font></a></h1>
+          </td>
+          <td  width="40%" valign="middle" style="word-break: break-all;" align="right">
+            <div style="font-family:微软雅黑;font-size: medium;">
+                <a href="https://computersciencekaoyan.github.io/index.html" style="text-decoration: none;color: white;">主页</a>
+              </div>
+            <br>
+            <p>
+              <div id="time" style="font-family:微软雅黑;font-size: medium;color: white;"></div>
+              <div style="font-family:微软雅黑;font-size: medium;">
+                <script type="text/javascript"> 
+                  setInterval(function(){
+                      var time=new Date();
+                      var year=time.getFullYear();
+                      var month=time.getMonth()+1;
+                      var day=time.getDate();
+                      var hour=checkTime(time.getHours());
+                      var minite=checkTime(time.getMinutes());
+                      var second=checkTime(time.getSeconds());
+                      function checkTime(i){
+                        if(i<10) return "0"+i;
+                        return i;
+                      }
+                      var box=document.getElementById("time");
+                      box.innerHTML="当前时间："+year+"年"+month+"月"+day+"日  "+hour+":"+minite+":"+second;		  
+                  },1000);
+                </script>
+              </div>
+            </p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<!-- ####################################################################################################### -->
+<div class="wrapper row3">
+  <div id="container" class="clear" style="line-height: 30px;">
+    <!-- ####################################################################################################### -->
+        <div style="font-size:24px;font-family: 微软雅黑;font-weight: bold;text-align: center;">
+            2022-2023-2考试时间安排
         </div>
+        <div style="font: size 16px;font-family: 微软雅黑;text-align: center;">
+          2023-02-17 13:17
+      </div>
+        <hr>
+        <br>
+      <div style="font-family: 华文仿宋;">
+        <table cellspacing="0" border="1px solid" cellpadding="0" Border-spacing="10px"  style="width: 60%;margin:0 auto;" >
+            <tbody style="width:80%;font-size: large;text-align: center;">
+                <tr>
+                    <td style="padding-left: 15px;width: 50%;">
+                        课程名称
+                    </td>
+                    <td style="padding-left: 15px;width: 25%;">
+                        日期
+                    </td>
+                    <td style="padding-left: 15px;width: 25%;">
+                        时间
+                  </td>
+                  <tr>
+                    <td style="padding-left: 15px;width: 50%;">
+                        医学英语
+                    </td>
+                    <td style="padding-left: 15px;width: 25%;">
+                        2月25日
+                    </td>
+                    <td style="padding-left: 15px;width: 25%;">
+                        13:30-15:30
+                  </td>
+                  <tr>
+                    <td style="padding-left: 15px;width: 50%;">
+                        病理学与病理生理学总论
+                    </td>
+                    <td style="padding-left: 15px;width: 25%;">
+                        3月1日
+                    </td>
+                    <td style="padding-left: 15px;width: 25%;">
+                        18:00-20:00
+                  </td>
+                  <tr>
+                    <td style="padding-left: 15px;width: 50%;">
+                        线性代数
+                    </td>
+                    <td style="padding-left: 15px;width: 25%;">
+                        4月3日
+                    </td>
+                    <td style="padding-left: 15px;width: 25%;">
+                        9:30-11:30
+                  </td>
+                  <tr>
+                    <td style="padding-left: 15px;width: 50%;">
+                        问题求解与实践(期中)
+                    </td>
+                    <td style="padding-left: 15px;width: 25%;">
+                        4月5日
+                    </td>
+                    <td style="padding-left: 15px;width: 25%;">
+                        9:30-11:30
+                  </td>
+                  <tr>
+                    <td style="padding-left: 15px;width: 50%;">
+                        数据结构
+                    </td>
+                    <td style="padding-left: 15px;width: 25%;">
+                        4月7日
+                    </td>
+                    <td style="padding-left: 15px;width: 25%;">
+                        9:30-11:30
+                  </td>
+                  <tr>
+                    <td style="padding-left: 15px;width: 50%;">
+                        计算机组成原理
+                    </td>
+                    <td style="padding-left: 15px;width: 25%;">
+                        5月7日
+                    </td>
+                    <td style="padding-left: 15px;width: 25%;">
+                        9:30-11:30
+                  </td>
+                  <tr>
+                    <td style="padding-left: 15px;width: 50%;">
+                        操作系统
+                    </td>
+                    <td style="padding-left: 15px;width: 25%;">
+                        5月8日
+                    </td>
+                    <td style="padding-left: 15px;width: 25%;">
+                        9:30-11:30
+                  </td>
 
-    </body>
+            </tbody>
+        </table>
 
+        <br>
+        <br>
+        
+      </div>
+      <!-- ####################################################################################################### -->
+  </div>
+</div>
+<!-- ####################################################################################################### -->
+
+<!-- ####################################################################################################### -->
+<!----CopyRight-->
+<footer style="padding:10px;text-align: center; background-position: bottom;margin-top:40px;">
+  <hr>
+  <div style="font-family:Arial, Helvetica, sans-serif; text-align: center;color: black; font-size: small;padding-bottom: 10px;padding-top: 0px;">
+  Copyright &copy; 2023 - Department of Computer Science and Medical Interdisciplinary Engineering
+
+  </div>
+</footer>
+
+
+
+
+</body>
 </html>
