--- a/index/timetable.html
+++ b/index/timetable.html
@@ -15,7 +15,7 @@
       <tbody>
         <tr>
           <td  width="60%" valign="middle" style="word-break: break-all;" align="left">
-            <h1><a href="https://computersciencekaoyan.github.io/index.html"><font face="Times">
+            <h1><a href="index.html"><font face="Times">
               计算机科学与医学交叉工程系<br>
               Department of Computer Science<br>
               and Medical Interdisciplinary Engineering
@@ -244,6 +244,7 @@
   
     </div>
   </footer>
+
 
 
 
