--- a/index/exam-time.html
+++ b/index/exam-time.html
@@ -15,7 +15,7 @@
       <tbody>
         <tr>
           <td  width="60%" valign="middle" style="word-break: break-all;" align="left">
-            <h1><a href="https://computersciencekaoyan.github.io/index.html"><font face="Times">
+            <h1><a href="index.html"><font face="Times">
               计算机科学与医学交叉工程系<br>
               Department of Computer Science<br>
               and Medical Interdisciplinary Engineering
@@ -67,89 +67,16 @@
         <hr>
         <br>
       <div style="font-family: 华文仿宋;">
-        <table cellspacing="0" border="1px solid" cellpadding="0" Border-spacing="10px"  style="width: 60%;margin:0 auto;" >
-            <tbody style="width:80%;font-size: large;text-align: center;">
+        <table cellspacing="0" border="1px solid" cellpadding="0" Border-spacing="10px"  style="width: 60%;">
+            <tbody style="width: 60%;font-size: large;">
                 <tr>
                     <td style="padding-left: 15px;width: 50%;">
-                        课程名称
+                        节次
                     </td>
-                    <td style="padding-left: 15px;width: 25%;">
-                        日期
-                    </td>
-                    <td style="padding-left: 15px;width: 25%;">
+                    <td style="padding-left: 15px;width: 50%;">
                         时间
-                  </td>
-                  <tr>
-                    <td style="padding-left: 15px;width: 50%;">
-                        医学英语
                     </td>
-                    <td style="padding-left: 15px;width: 25%;">
-                        2月25日
-                    </td>
-                    <td style="padding-left: 15px;width: 25%;">
-                        13:30-15:30
-                  </td>
-                  <tr>
-                    <td style="padding-left: 15px;width: 50%;">
-                        病理学与病理生理学总论
-                    </td>
-                    <td style="padding-left: 15px;width: 25%;">
-                        3月1日
-                    </td>
-                    <td style="padding-left: 15px;width: 25%;">
-                        18:00-20:00
-                  </td>
-                  <tr>
-                    <td style="padding-left: 15px;width: 50%;">
-                        线性代数
-                    </td>
-                    <td style="padding-left: 15px;width: 25%;">
-                        4月3日
-                    </td>
-                    <td style="padding-left: 15px;width: 25%;">
-                        9:30-11:30
-                  </td>
-                  <tr>
-                    <td style="padding-left: 15px;width: 50%;">
-                        问题求解与实践(期中)
-                    </td>
-                    <td style="padding-left: 15px;width: 25%;">
-                        4月5日
-                    </td>
-                    <td style="padding-left: 15px;width: 25%;">
-                        9:30-11:30
-                  </td>
-                  <tr>
-                    <td style="padding-left: 15px;width: 50%;">
-                        数据结构
-                    </td>
-                    <td style="padding-left: 15px;width: 25%;">
-                        4月7日
-                    </td>
-                    <td style="padding-left: 15px;width: 25%;">
-                        9:30-11:30
-                  </td>
-                  <tr>
-                    <td style="padding-left: 15px;width: 50%;">
-                        计算机组成原理
-                    </td>
-                    <td style="padding-left: 15px;width: 25%;">
-                        5月7日
-                    </td>
-                    <td style="padding-left: 15px;width: 25%;">
-                        9:30-11:30
-                  </td>
-                  <tr>
-                    <td style="padding-left: 15px;width: 50%;">
-                        操作系统
-                    </td>
-                    <td style="padding-left: 15px;width: 25%;">
-                        5月8日
-                    </td>
-                    <td style="padding-left: 15px;width: 25%;">
-                        9:30-11:30
-                  </td>
-
+                
             </tbody>
         </table>
 
