--- a/index/calendar.html
+++ b/index/calendar.html
@@ -22,6 +22,10 @@
             </font></a></h1>
           </td>
           <td  width="40%" valign="middle" style="word-break: break-all;" align="right">
+            <div style="font-family:微软雅黑;font-size: medium;">
+              <a href="https://computersciencekaoyan.github.io/index.html" style="text-decoration: none;color: white;">主页</a>
+            </div>
+          
             <br>
             <p>
               <div id="time" style="font-family:微软雅黑;font-size: medium;color: white;"></div>
