--- a/index/timetable.html
+++ b/index/timetable.html
@@ -17,8 +17,7 @@
           <td  width="60%" valign="middle" style="word-break: break-all;" align="left">
             <h1><a href="index.html"><font face="Times">
               计算机科学与医学交叉工程系<br>
-              Department of Computer Science<br>
-              and Medical Interdisciplinary Engineering
+              Computer Science and Medical <br>Interdisciplinary Engineering
             </font></a></h1>
           </td>
           <td  width="40%" valign="middle" style="word-break: break-all;" align="right">
