--- a/Login.html
+++ b/Login.html
@@ -77,7 +77,7 @@ input[type=submit]:hover {
                     <label style="font-family:微软雅黑;font-size:medium;font-weight:bold;">用户名</label>
                     <input type="text" id="Account" placeholder="Account">
                     <label style="font-family:微软雅黑;font-size:medium;font-weight:bold;">密码</label>
-                    <input type="text" id="password" placeholder="Password">
+                    <input type="password" id="password" placeholder="Password">
                     <label style="font-family:微软雅黑;font-size:medium;font-weight:bold;">身份认证</label>
                     <select id="country" name="country">
                       <option value="australia">Staff</option>
@@ -98,7 +98,7 @@ input[type=submit]:hover {
 			i="123456!";
 			j=document.getElementById("password").value;
 				if(j==i){location.href=" https://computersciencekaoyan.github.io/Canvas/canvas.html ";}
-				else{alert("Password Failed!Please Input Again!");}
+				else{alert("Password Failed! Please Input Again!");}
 		}
 		</script>
     <!---**************************************************************************************-->
