--- a/index/exam-time.html
+++ b/index/exam-time.html
@@ -164,7 +164,7 @@
 
 <!-- ####################################################################################################### -->
 <!----CopyRight-->
-<footer style="padding:10px;text-align: center; background-position: bottom;margin-top:40px;">
+<footer style="margin: 0 auto;;text-align: center; background-position: bottom;margin-top:40px;width:960px">
   <hr>
   <div style="font-family:Arial, Helvetica, sans-serif; text-align: center;color: black; font-size: small;padding-bottom: 10px;padding-top: 0px;">
   Copyright &copy; 2023 - Department of Computer Science and Medical Interdisciplinary Engineering
