--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                     <li><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/02%20%E5%9F%B9%E5%85%BB%E6%96%B9%E6%A1%88%E6%9F%A5%E8%AF%A2/%E5%9F%B9%E5%85%BB%E6%96%B9%E6%A1%88.pdf" style="color: black;text-decoration: none;" target="_blank" >培养方案查询</a></li>
                     <li><a href="index/calendar.html" style="color: black;text-decoration: none;">2022-2023年校历查询</a></li>
                     <li><a href="index/exam-time.html" style="color: black;text-decoration: none;">2022-2023-2考试时间查询</a> </li>
+                    <li><a href="index/Select.html" style="color: black;text-decoration: none;">2022-2023-2学生选课通知</a> </li>
                   </ul>
                   &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
                 </div>
@@ -184,7 +185,7 @@
 
 
 <!----CopyRight-->
-<footer style="padding:10px;text-align: center; background-position: bottom;margin-top:40px;">
+<footer style="margin: 0 auto;;text-align: center; background-position: bottom;margin-top:40px;width:960px">
   <hr>
   <div style="font-family:Arial, Helvetica, sans-serif; text-align: center;color: black; font-size: small;padding-bottom: 10px;padding-top: 0px;">
   Copyright &copy; 2023 - Department of Computer Science and Medical Interdisciplinary Engineering
