--- a/index.html
+++ b/index.html
@@ -116,14 +116,29 @@
               <td style="width: 50%;padding-left:30px;"valign="top">
                 <div id="latestnews" style="font-size: medium;font-family:微软雅黑;line-height:30px;">
                   <h2>
-                    <font face="微软雅黑">教学文件</font>
+                    <table style="width: 100%;">
+                      <tbody>
+                        <tr>
+                          <td style="width: 50%;">
+                              <font face="微软雅黑">教学文件</font> 
+                          </td>
+                          <td style="width: 50%;">
+                            <div style="text-align: right;">
+                              <a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/tree/master/03%20%E8%AF%BE%E7%A8%8B%E5%A4%A7%E8%A1%A8%E4%B8%8E%E6%95%99%E5%AD%A6%E6%97%A5%E5%8E%86" style="color: black;text-decoration: none;" target="_blank" >
+                                <img src="image/添加_add.png" alt="Newterm" width="14" height="14">
+                              </a>
+                            </div>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+
                   </h2>
                   <ul>
                     <li><a href="index/timetable.html" style="color: black;text-decoration: none;">学生上课时间</a></li>
                     <li><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/03%20%E8%AF%BE%E7%A8%8B%E5%A4%A7%E8%A1%A8%E4%B8%8E%E6%95%99%E5%AD%A6%E6%97%A5%E5%8E%86/01%20%E5%90%84%E5%AD%A6%E6%9C%9F%E8%AF%BE%E8%A1%A8/2022-2023-1-winter.pdf" style="color: black;text-decoration: none;" target="_blank" >2022-2023-1课表</a></li>
                     <li><a href=" https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/03%20%E8%AF%BE%E7%A8%8B%E5%A4%A7%E8%A1%A8%E4%B8%8E%E6%95%99%E5%AD%A6%E6%97%A5%E5%8E%86/01%20%E5%90%84%E5%AD%A6%E6%9C%9F%E8%AF%BE%E8%A1%A8/2022-2023-2%E8%AF%BE%E7%A8%8B%E8%A1%A8.pdf" style="color: black;text-decoration: none;" target="_blank" >2022-2023-2课表</a></li>
                   </ul>
-                  <div style="text-align: right;font-size: small;"><a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/tree/master/03%20%E8%AF%BE%E7%A8%8B%E5%A4%A7%E8%A1%A8%E4%B8%8E%E6%95%99%E5%AD%A6%E6%97%A5%E5%8E%86" target="_blank">more</a></div>
                   &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
                 </div>
               </td>
@@ -145,13 +160,27 @@
         <br>
         <div id="latestnews" style="font-size: medium;font-family:微软雅黑;line-height:30px;">
           <h2>
-            <font face="微软雅黑">医学院相关资源下载通道</font>
+            <table style="width: 100%;">
+              <tbody>
+                <tr>
+                  <td style="width: 50%;">
+                      <font face="微软雅黑">医学院相关资源下载通道</font> 
+                  </td>
+                  <td style="width: 50%;">
+                    <div style="text-align: right;">
+                      <a href="https://gitee.com/Jinhang_Qiu/Download" style="color: black;text-decoration: none;" target="_blank" >
+                        <img src="image/添加_add.png" alt="Newterm" width="14" height="14">
+                      </a>
+                    </div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </h2>
           <ul>
             <li><a href="https://gitee.com/Jinhang_Qiu/Download/tree/master/%E7%97%85%E7%90%86%E5%AD%A6%E4%B8%8E%E7%97%85%E7%90%86%E7%94%9F%E7%90%86%E5%AD%A6%E6%80%BB%E8%AE%BA" style="color: black;text-decoration: none;" target="_blank" >病理学与病理生理学总论资料</a></li>
             <li><a href="https://gitee.com/Jinhang_Qiu/Download/tree/master/%E5%8C%BB%E5%AD%A6%E8%8B%B1%E8%AF%AD" style="color: black;text-decoration: none;" target="_blank" >医学英语期末复习学案</a></li>
           </ul>
-          <div style="text-align: right;font-size: small;"><a href="https://gitee.com/Jinhang_Qiu/Download" target="_blank">more</a></div>
         </div>
         
       </div>
@@ -159,7 +188,22 @@
       <div id="column">
         <div class="holder last" style="padding-left: 15px;">
           <h2>
-            <font face="微软雅黑">友情链接</font>
+            <table style="width: 100%;">
+              <tbody>
+                <tr>
+                  <td style="width: 50%;">
+                      <font face="微软雅黑">友情链接</font> 
+                  </td>
+                  <td style="width: 50%;">
+                    <div style="text-align: right;">
+                      <a href="Quicklink.html" style="color: black;text-decoration: none;" target="_blank" >
+                        <img src="image/添加_add.png" alt="Newterm" width="14" height="14">
+                      </a>
+                    </div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </h2>
           <ul class="staffmembers" style="font-family: 微软雅黑, Arial, Helvetica, sans-serif;">
             <div style="font-size: medium;line-height:30px;">
