--- a/Canvas/Homepage/curriculum-ms.html
+++ b/Canvas/Homepage/curriculum-ms.html
@@ -190,20 +190,20 @@
 				</tr> 
 
 <!-- Archnowledge -->		
-				<tr bgcolor="#999999" height="20px">
-					<td style="padding-left:10px; padding-top: 10px; padding-bottom: 10px">
-						<font style="font-size: 12px;">
-							<b>Go to <a href="#top" style="color: #000000; text-decoration:none;">Top</a></b> &ensp;|&ensp;
-							<b><a href="https://computersciencekaoyan.github.io/canvas.html" style="color: #000000; text-decoration:none;">Canvas Home Page</a></b> &ensp;|&ensp; 
-							<b><a href="Announce.html" target="_blank" style="color: #000000; text-decoration:none;"> Announcement </a></b>
-							<br>
-							Questions or comments regarding Canvas? Send e-mail to the course Staffs or TAs.
-							<br>
-							Copyright © 2023 Department of Computer Science and Medical Interdisciplinary Engineering&ensp;|&ensp;
-							Last modified January 19, 2023
-						</font>
-					</td>
-				</tr>
+<tr bgcolor="#999999" height="20px">
+	<td style="padding-left:10px; padding-top: 10px; padding-bottom: 10px">
+		<font style="font-size: 12px;">
+			<b>Go to <a href="#top" style="color: #000000; text-decoration:none;">Top</a></b> &ensp;|&ensp;
+			<b><a href="https://computersciencekaoyan.github.io/Canvas/canvas.html" style="color: #000000; text-decoration:none;">Canvas Home Page</a></b> &ensp;|&ensp; 
+			<b><a href="Announce.html" target="_blank" style="color: #000000; text-decoration:none;"> Announcement </a></b>
+			<br>
+			Questions or comments regarding Canvas? Send e-mail to the course Staffs or TAs.
+			<br>
+			Copyright © 2023 Department of Computer Science and Medical Interdisciplinary Engineering&ensp;|&ensp;
+			Last modified Feburary 26, 2023
+		</font>
+	</td>
+</tr>
 
 
 <!-- End Archnowledge -->
