--- a/Canvas/Homepage/CS0501.html
+++ b/Canvas/Homepage/CS0501.html
@@ -308,13 +308,13 @@
 					<td style="padding-left:10px; padding-top: 10px; padding-bottom: 10px">
 						<font style="font-size: 12px;">
 							<b>Go to <a href="#top" style="color: #000000; text-decoration:none;">Top</a></b> &ensp;|&ensp;
-							<b><a href="https://computersciencekaoyan.github.io/canvas.html" style="color: #000000; text-decoration:none;">Canvas Home Page</a></b> &ensp;|&ensp; 
+							<b><a href="https://computersciencekaoyan.github.io/Canvas/canvas.html" style="color: #000000; text-decoration:none;">Canvas Home Page</a></b> &ensp;|&ensp; 
 							<b><a href="Announce.html" target="_blank" style="color: #000000; text-decoration:none;"> Announcement </a></b>
 							<br>
 							Questions or comments regarding Canvas? Send e-mail to the course Staffs or TAs.
 							<br>
 							Copyright © 2023 Department of Computer Science and Medical Interdisciplinary Engineering&ensp;|&ensp;
-							Last modified Feburary 11, 2023
+							Last modified Feburary 26, 2023
 						</font>
 					</td>
 				</tr>
