--- a/Login.html
+++ b/Login.html
@@ -58,11 +58,8 @@ input[type=submit]:hover {
     <table  width="100%" border="0" cellspacing="0" cellpadding="0" >
       <tbody>
         <tr>
-          <td  width="70%" valign="middle" style="word-break: break-all;" align="left">
-            <h1 style="color: white;"><font face="Times">
-              计算机科学与医学交叉工程<font weight="bolder" style="font-family: 微软雅黑;"> | </font>统一身份认证<br>
-              Central Authentication Service 
-            </font></h1>
+          <td  width="100%" valign="middle" style="word-break: break-all;" align="left">
+            <img src="image/tyrz.png" alt="Newterm" width="630" height="90">
           </td>
         </tr>
       </tbody>
