--- a/index.html
+++ b/index.html
@@ -229,11 +229,25 @@
 
 
 <!----CopyRight-->
-<footer style="margin: 0 auto;;text-align: center; background-position: bottom;margin-top:40px;width:960px">
-  <hr>
-  <div style="font-family:Arial, Helvetica, sans-serif; text-align: center;color: black; font-size: small;padding-bottom: 10px;padding-top: 0px;">
-  Copyright &copy; 2023 - Department of Computer Science and Medical Interdisciplinary Engineering
-    
+<footer style="margin: 0 auto;;text-align: center; background-position: bottom;margin-top:40px;width:100%;background-color:#2D3B45;position: absolute;bottom: 0;">
+  <div style="font-family:Arial, Helvetica, sans-serif; text-align: center;color: white; font-size: small;padding-bottom: 10px;padding-top: 0px;">
+    <br>
+    <table  width="964px" border="0" cellspacing="0" cellpadding="0" style="margin: auto;">
+      <tbody>
+        <tr> 
+          <td  width="50%" valign="middle" style="word-break: break-all;" align="left">
+             Copyright &copy; All Rights Reserved <br>
+             2023 - Computer Science and Medical Interdisciplinary Engineering
+          </td>
+          <td  width="50%" valign="middle" style="word-break: break-all;" align="right">
+            <img src="image/CST Med.png" alt="Newterm" width="500" height="66">
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  
+  
+   
   </div>
 </footer>
 
