--- a/index/calendar.html
+++ b/index/calendar.html
@@ -16,7 +16,7 @@
         <tr>
           <td  width="60%" valign="middle" style="word-break: break-all;" align="left">
             <h1><a href="https://computersciencekaoyan.github.io/index.html"><font face="Times">
-              计算机科学与医学交叉工程系<br>
+              计算机科学与医学交叉工程<br>
              Computer Science and Medical <br>Interdisciplinary Engineering
             </font></a></h1>
           </td>
@@ -57,13 +57,26 @@
 <div class="wrapper row3">
   <div id="container" class="clear" style="line-height: 30px;">
     <!-- ####################################################################################################### -->
-        <div style="font-size:24px;font-family: 微软雅黑;font-weight: bold;text-align: center;">
-            2022-2023学年度校历
-        </div>
-        <div style="font: size 16px;font-family: 微软雅黑;text-align: center;">
-          2023-02-16 10:53
-      </div>
-        <hr>
+        <table  width="100%" border="0" cellspacing="0" cellpadding="0" style="margin: auto;">
+          <tbody>
+            <tr> 
+              <td  width="50%" valign="middle" style="word-break: break-all;" align="left">
+                <div style="font-size:28px;font-family: 微软雅黑;font-weight: bold;text-align: left;font-family: 等线;">面向学生的通知</div>
+              </td>
+              <td  width="50%" valign="middle" style="word-break: break-all;text-align: right;">
+                <div style="font-size:16px;font-family: 微软雅黑;text-align: right;color: #999;">
+                    当前位置：
+                  <a href="https://computersciencekaoyan.github.io/" style="font-size: 16px;font-family: 微软雅黑;text-decoration: none;color: #999;">首页</a>
+                    &ensp;->&ensp;
+                  <a href="calendar.html" style="font-size: 16px;font-family: 微软雅黑;text-decoration: none;color: #999;">面向学生的通知</a>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <hr> 
+        <div style="font-size:28px;font-family: 微软雅黑;text-align:center;">2022-2023学年度校历</div>
+        <div style="font: size 16px;font-family: 微软雅黑;text-align: center;line-height: 40px;">发布时间：2023-02-16 10:53</div>
         <br><br><br><br><br><br><br><br><br>
         <a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/03%20%E8%AF%BE%E7%A8%8B%E5%A4%A7%E8%A1%A8%E4%B8%8E%E6%95%99%E5%AD%A6%E6%97%A5%E5%8E%86/02%20%E5%AD%A6%E6%9C%9F%E6%A0%A1%E5%8E%86/2022-2023-2%E6%A0%A1%E5%8E%86.pdf " target="_blank" style="font-size: medium;font-family: 微软雅黑;">[点击下载-2022-2023-2学期教学行政历]</a>
         
@@ -77,13 +90,22 @@
 
 <!----CopyRight-->
 
-<footer style="margin: 0 auto;;text-align: center; background-position: bottom;margin-top:40px;width:960px">
-  <hr>
-  <div style="font-family:Arial, Helvetica, sans-serif; text-align: center;color: black; font-size: small;padding-bottom: 10px;padding-top: 0px;">
-  Copyright &copy; 2023 - Department of Computer Science and Medical Interdisciplinary Engineering
-
-  </div>
-</footer>
+<footer style="margin: 0 auto;;text-align: center; background-position: bottom;margin-top:40px;width:100%;background-color:#2D3B45;position: absolute;bottom: 0;">
+  <div style="font-family:Arial, Helvetica, sans-serif; text-align: center;color: white; font-size: small;padding-bottom: 10px;padding-top: 0px;">
+    <br>
+    <table  width="964px" border="0" cellspacing="0" cellpadding="0" style="margin: auto;">
+      <tbody>
+        <tr> 
+          <td  width="50%" valign="middle" style="word-break: break-all;" align="left">
+             Copyright &copy; All Rights Reserved <br>
+             2023 - Computer Science and Medical Interdisciplinary Engineering
+          </td>
+          <td  width="50%" valign="middle" style="word-break: break-all;" align="right">
+            <img src="image/CST Med.png" alt="Newterm" width="500" height="66">
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
 
 
