--- a/index/exam-time.html
+++ b/index/exam-time.html
@@ -16,7 +16,7 @@
         <tr>
           <td  width="60%" valign="middle" style="word-break: break-all;" align="left">
             <h1><a href="index.html"><font face="Times">
-              计算机科学与医学交叉工程系<br>
+              计算机科学与医学交叉工程<br>
               Computer Science and Medical <br>Interdisciplinary Engineering
             </font></a></h1>
           </td>
@@ -57,14 +57,27 @@
 <div class="wrapper row3">
   <div id="container" class="clear" style="line-height: 30px;">
     <!-- ####################################################################################################### -->
-        <div style="font-size:24px;font-family: 微软雅黑;font-weight: bold;text-align: center;">
-            2022-2023-2考试时间安排
-        </div>
-        <div style="font: size 16px;font-family: 微软雅黑;text-align: center;">
-          2023-02-17 13:17
-      </div>
-        <hr>
-        <br>
+    <table  width="100%" border="0" cellspacing="0" cellpadding="0" style="margin: auto;">
+      <tbody>
+        <tr> 
+          <td  width="50%" valign="middle" style="word-break: break-all;" align="left">
+            <div style="font-size:28px;font-family: 微软雅黑;font-weight: bold;text-align: left;font-family: 等线;">面向学生的通知</div>
+          </td>
+          <td  width="50%" valign="middle" style="word-break: break-all;text-align: right;">
+            <div style="font-size:16px;font-family: 微软雅黑;text-align: right;color: #999;">
+                当前位置：
+              <a href="https://computersciencekaoyan.github.io/" style="font-size: 16px;font-family: 微软雅黑;text-decoration: none;color: #999;">首页</a>
+                &ensp;->&ensp;
+              <a href="exam-time.html" style="font-size: 16px;font-family: 微软雅黑;text-decoration: none;color: #999;">面向学生的通知</a>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <hr> 
+    <div style="font-size:28px;font-family: 微软雅黑;text-align:center;"> 2022-2023-2考试时间安排</div>
+    <div style="font: size 16px;font-family: 微软雅黑;text-align: center;line-height: 40px;">发布时间：2023-02-17 13:17</div>
+  <br>
       <div style="font-family: 华文仿宋;">
         <table cellspacing="0" border="1px solid" cellpadding="0" Border-spacing="10px"  style="width: 60%;margin: 0 auto;">
             <tbody style="width: 60%;font-size: large;">
@@ -164,13 +177,22 @@
 
 <!-- ####################################################################################################### -->
 <!----CopyRight-->
-<footer style="margin: 0 auto;;text-align: center; background-position: bottom;margin-top:40px;width:960px">
-  <hr>
-  <div style="font-family:Arial, Helvetica, sans-serif; text-align: center;color: black; font-size: small;padding-bottom: 10px;padding-top: 0px;">
-  Copyright &copy; 2023 - Department of Computer Science and Medical Interdisciplinary Engineering
-
-  </div>
-</footer>
+<footer style="margin: 0 auto;;text-align: center; background-position: bottom;margin-top:40px;width:100%;background-color:#2D3B45;position: absolute;bottom: 0;">
+  <div style="font-family:Arial, Helvetica, sans-serif; text-align: center;color: white; font-size: small;padding-bottom: 10px;padding-top: 0px;">
+    <br>
+    <table  width="964px" border="0" cellspacing="0" cellpadding="0" style="margin: auto;">
+      <tbody>
+        <tr> 
+          <td  width="50%" valign="middle" style="word-break: break-all;" align="left">
+             Copyright &copy; All Rights Reserved <br>
+             2023 - Computer Science and Medical Interdisciplinary Engineering
+          </td>
+          <td  width="50%" valign="middle" style="word-break: break-all;" align="right">
+            <img src="image/CST Med.png" alt="Newterm" width="500" height="66">
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
 
 
