--- a/index.html
+++ b/index.html
@@ -229,10 +229,10 @@
 
 
 <!----CopyRight-->
-<footer style="margin: 0 auto;;text-align: center; background-position: bottom;margin-top:40px;width:100%;background-color:#2D3B45;position: absolute;bottom: 0;">
-  <div style="font-family:Arial, Helvetica, sans-serif; text-align: center;color: white; font-size: small;padding-bottom: 10px;padding-top: 0px;">
+
+  <div style="width:100%;bottom: 0;position: absolute;background-color:#2D3B45;font-family:Arial, Helvetica, sans-serif; text-align: center;color: white; font-size: small;padding-bottom: 10px;padding-top: 0px;">
     <br>
-    <table  width="964px" border="0" cellspacing="0" cellpadding="0" style="margin: auto;">
+    <table  width="964px" border="0" cellspacing="0" cellpadding="0" style="margin: auto;background-color:#2D3B45;">
       <tbody>
         <tr> 
           <td  width="50%" valign="middle" style="word-break: break-all;" align="left">
@@ -240,14 +240,12 @@
              2023 - Computer Science and Medical Interdisciplinary Engineering
           </td>
           <td  width="50%" valign="middle" style="word-break: break-all;" align="right">
-            <img src="image/CST Med.png" alt="Newterm" width="500" height="66">
+            <img src="image/CST Med.png" alt="Newterm" width="430" height="66">
           </td>
         </tr>
       </tbody>
     </table>
-  
-  
-   
+    <br>
   </div>
 </footer>
 
