--- a/Quicklink.html
+++ b/Quicklink.html
@@ -84,9 +84,9 @@
                 <td style="width: 50%;padding-right: 15px;" valign="top">
                     <div style="font-size: 24px;font-family: 等线;font-weight: bold;">教学信息</div><hr>
                     <ul style="font-size: small;">
-                            <li><a href="" style="font-size: 16px;font-family: 微软雅黑;text-decoration: none;color:black;" target="_blank"></a></li>
-                            <li><a href="" style="font-size: 16px;font-family: 微软雅黑;text-decoration: none;color:black;" target="_blank"></a></li>
-                            <li><a href="" style="font-size: 16px;font-family: 微软雅黑;text-decoration: none;color:black;" target="_blank"></a></li>
+                            <li><a href="" style="font-size: 16px;font-family: 微软雅黑;text-decoration: none;color:black;" target="_blank">教学信息服务网</a></li>
+                            <li><a href="" style="font-size: 16px;font-family: 微软雅黑;text-decoration: none;color:black;" target="_blank">上海交通大学教务处</a></li>
+                            <li><a href="" style="font-size: 16px;font-family: 微软雅黑;text-decoration: none;color:black;" target="_blank">上海交通大学电子信息与电气工程学院</a></li>
                             <li><a href="" style="font-size: 16px;font-family: 微软雅黑;text-decoration: none;color:black;" target="_blank"></a></li>
                             <li><a href="" style="font-size: 16px;font-family: 微软雅黑;text-decoration: none;color:black;" target="_blank"></a></li>
                             <li><a href="" style="font-size: 16px;font-family: 微软雅黑;text-decoration: none;color:black;" target="_blank"></a></li>
@@ -194,9 +194,9 @@
 <!-- ####################################################################################################### -->
 <!----CopyRight-->
 
-  <div style="background-color:#2D3B45;font-family:Arial, Helvetica, sans-serif; text-align: center;color: white; font-size: small;padding-bottom: 10px;padding-top: 0px;">
+<div style="width:100%;bottom: 0;position: absolute;background-color:#2D3B45;font-family:Arial, Helvetica, sans-serif; text-align: center;color: white; font-size: small;padding-bottom: 10px;padding-top: 0px;">
     <br>
-    <table  width="964px" border="0" cellspacing="0" cellpadding="0" style="margin: auto;">
+    <table  width="964px" border="0" cellspacing="0" cellpadding="0" style="margin: auto;background-color:#2D3B45;">
       <tbody>
         <tr> 
           <td  width="50%" valign="middle" style="word-break: break-all;" align="left">
@@ -204,12 +204,16 @@
              2023 - Computer Science and Medical Interdisciplinary Engineering
           </td>
           <td  width="50%" valign="middle" style="word-break: break-all;" align="right">
-            <img src="image/CST Med.png" alt="Newterm" width="500" height="66">
+            <a href="https://computersciencekaoyan.github.io/" style="color: black;text-decoration: none;">
+              <img src="image/CST Med.png" alt="Newterm" width="430" height="66">
+            </a>
           </td>
         </tr>
       </tbody>
     </table>
+    <br>
   </div>
+
 
 
 
