--- a/index/timetable.html
+++ b/index/timetable.html
@@ -244,13 +244,17 @@
       <a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/01%20%E5%B8%B8%E7%94%A8%E6%A8%A1%E6%9D%BF%E8%A1%A8%E6%A0%BC%E4%B8%8B%E8%BD%BD/02%20%E5%B8%B8%E7%94%A8%E7%AE%A1%E7%90%86%E6%96%87%E4%BB%B6/%E4%BD%9C%E6%81%AF%E6%97%B6%E9%97%B4%EF%BC%88%E6%96%B0%E7%89%88%EF%BC%89.docx" target="_blank" style="font-size: medium;font-family: 微软雅黑;">[上课时间表]</a>
     <!-- ####################################################################################################### -->
   </div>
+
+
+
+  
 </div>
 <!-- ####################################################################################################### -->
 
 <!-- ####################################################################################################### -->
 <!----CopyRight-->
 
-<div style="width:100%;bottom: 0;position: absolute;background-color:#2D3B45;font-family:Arial, Helvetica, sans-serif; text-align: center;color: white; font-size: small;padding-bottom: 10px;padding-top: 0px;">
+<div style="background-color:#2D3B45;font-family:Arial, Helvetica, sans-serif; text-align: center;color: white; font-size: small;padding-bottom: 10px;padding-top: 0px;"></div>
     <br>
     <table  width="964px" border="0" cellspacing="0" cellpadding="0" style="margin: auto;background-color:#2D3B45;">
       <tbody>
